# Aios

./: .aios_history  .gitignore  ACTIONS_INTELLIGENCE_GUIDE.md  ACTION_PLANNER_GUIDE.md  AGENCY_DASHBOARD_GUIDE.md  AGENT_COMMUNICATION_GUIDE.md  AGENT_MEMORY_GUIDE.md  AGENT_REGISTRY_GUIDE.md  AI_COACH_GUIDE.md  AI_OS_AGENT_AUDIT.md  AI_OS_COMMAND_AUDIT.md  AI_OS_DASHBOARD_AUDIT.md  AI_OS_FEATURE_AUDIT.md  AI_OS_INTEGRATION_AUDIT.md  AI_OS_RELEASE_READINESS_REPORT.md  AI_OS_SERVICE_AUDIT.md  AI_OS_TEST_COVERAGE_AUDIT.md  API_DOCS_GUIDE.md  ARCHITECTURE_DOCS_GUIDE.md  ARCHITECTURE_OVERVIEW.md  CALENDAR_GUIDE.md  CHANGELOG.md  CHANGELOG_ENGINE_GUIDE.md  CHAT_INTERFACE_GUIDE.md  CI_FIX_REPORT.md  CODE_OF_CONDUCT.md  COMMANDS.md  COMMAND_PALETTE_GUIDE.md  CONNECTOR_REGISTRY_GUIDE.md  CONTACT_INTELLIGENCE_GUIDE.md  CONTEXT_ENGINE_GUIDE.md  CONVERSATIONAL_MEMORY_GUIDE.md  CONVERSATIONS.md  CREDENTIAL_VAULT_GUIDE.md  CRM_GUIDE.md  DASHBOARD_GUIDE.md  DECISION_LOG_GUIDE.md  DELEGATION_ENGINE_GUIDE.md  DEMO_SCRIPT.md  DOCUMENT_ENGINE_GUIDE.md  (+79 more)
core/: .aios_9router_cache.json  .aios_providers_metrics.json  ARCHITECTURE.md  aios.db  pyproject.toml
core/.aios_conversations/: 40c3d81d-3983-4b2a-b924-41f84b0074f4.json  63573271-4c71-48a5-88bb-192178aa4e4a.json  6f95865a-d72d-42dc-a19f-58674d54e468.json  7ccd052b-8145-4cd7-9ad5-4bbe561031b9.json  8499cdb8-9bf7-4c06-838b-1ca8302829b9.json  85de950e-e6ba-43eb-afae-ef973a07e48b.json  9819dbd2-4318-48ee-a37e-fee6105ad136.json  9d233d80-addc-4e26-9fb5-7a7fda9fd77a.json  9d3b0a79-985c-4cab-842d-52d625098b58.json  9dfa65fa-b5a3-461b-8b6c-7a012bfc3d30.json  a7b849b3-3a61-49e1-8912-636d884801e0.json  aa66e790-0f3d-4ae3-a83b-47b9e23acc8d.json  abc3bdb2-c365-4c76-b4ec-836bfa19ab32.json  active_conversation.txt  cad949b2-20b3-40c5-a275-180b0da90b49.json
core/config/: memory.json
core/docs/: DEPENDENCY_SUMMARY.md  REPOSITORY_SUMMARY.md  WORKSPACE_HEALTH.md
core/docs/business/: analytics_report.md  client_report.md  organization_report.md  proposal_report.md
core/docs/github/: actions_report.md  branch_report.md  issue_report.md  pull_request_report.md  release_report.md  repository_summary.md
core/docs/n8n/: health_report.md
core/docs/persistence/: POSTGRESQL_DIAGNOSTICS.md  POSTGRESQL_FAILURE_RECOVERY.md  POSTGRESQL_MIGRATION_VALIDATION.md  REDIS_PLATFORM_DIAGNOSTICS.md  REDIS_PLATFORM_HEALTH.md  REDIS_PLATFORM_STATISTICS.md  RUNTIME_INTELLIGENCE_HEALTH.md  RUNTIME_INTELLIGENCE_STATISTICS.md  RUNTIME_INTELLIGENCE_STATUS.md
core/docs/project/: dependency_report.md  health_report.md  knowledge_graph_report.md  risk_report.md
core/docs/providers/: COST_REPORT.md  PERFORMANCE_REPORT.md  PROVIDERS_HEALTH.md  PROVIDERS_STATISTICS.md  PROVIDER_HEALTH.md  PROVIDER_STATUS.md  ROUTING_REPORT.md  analytics_report.md  benchmark_report.md  capability_matrix.md  configuration_summary.md  connected_models.md  health_report.md  installed_providers.md  local_gateway_status.md  routing_summary.md
core/docs/runtime/: deployment_report.md  execution_report.md  failure_report.md  synchronization_report.md
core/docs/workflows/: architecture_diagram.md  credential_report.md  optimization_report.md  validation_report.md  workflow_summary.md
core/src/aios/: __init__.py  bootstrap.py  cli.py  config.py  kernel.py  registry.py  ux.py
core/src/aios/bootstrap_modules/: __init__.py  agents.py  bootstrap_kernel.py  cli.py  events.py  infrastructure.py  kernel.py  memory.py  n8n_builder.py  persistence_builder.py  providers.py  qdrant_builder.py  redis_builder.py  runtime_builder.py  services.py  source_control_builder.py  workspace.py
core/src/aios/brain/: __init__.py  brain.py  context_manager.py  models.py  planner.py  provider_selector.py  skill_selector.py  workflow.py
core/src/aios/docgen/: __init__.py  __main__.py  cert_analyzers.py  cert_engine.py  cert_main.py  cert_models.py  cert_renderers.py  diagram_analyzers.py  diagram_engine.py  diagram_main.py  diagram_models.py  diagram_renderers.py  discoverers.py  engine.py  models.py  ops_analyzers.py  ops_engine.py  ops_main.py  ops_models.py  ops_renderers.py  refgen_discoverers.py  refgen_engine.py  refgen_main.py  refgen_models.py  refgen_renderers.py  renderers.py
core/src/aios/github/: __init__.py  connection.py  intelligence.py  memory.py  reports.py
core/src/aios/local/: __init__.py  agency_commands.py  benchmark.py  capability_registry.py  cli_commands.py  cli_workspace_commands.py  core_intelligence.py  discovery.py  documentation_commands.py  github_intelligence_commands.py  health_monitor.py  integration_commands.py  loader.py  memory_integration.py  personal_commands.py  project_commands.py  research_commands.py  router.py  service.py  workflow_commands.py
core/src/aios/n8n/: __init__.py  connection.py  intelligence.py  runtime.py  service.py
core/src/aios/providers/: __init__.py  adapters.py  analytics.py  benchmark.py  config.py  health.py  interface.py  metrics.py  models.py  ninerouter.py  nvidia.py  registry.py  router.py  selector.py
core/src/aios/services/: README_SECURITY.md  __init__.py  agency.py  agency_graph_bridge.py  agency_impl.py  agent.py  agent_impl.py  (+149 more)
core/tests/: __init__.py  conftest.py  run_qdrant_production_validation.py  run_redis_production_validation.py  test_action.py  test_agency_intelligence.py  test_agent.py  test_agent_framework.py  test_agents.py  test_ai_memory_persistence.py  test_ai_workspace.py  test_api_documentation.py  test_approval.py  test_approval_governance.py  test_approval_history.py  test_architecture_documentation.py  test_automation.py  test_automation_persistence.py  test_bootstrap_regression.py  test_brain.py  test_business.py  test_canonical_pipeline.py  test_capability.py  test_career_agent.py  test_career_os.py  test_cli.py  test_code_generation.py  test_collaboration.py  test_command.py  test_context.py  test_conversation.py  test_daily_os.py  test_developer_agent.py  test_developer_v2.py  test_developer_workspace.py  test_diagram_gen.py  test_docgen.py  test_docintel.py  test_docintel_agent.py  test_documentation_intelligence.py  (+116 more)
(+942 files in other folders)
