[project]
name = "aios"
version = "0.5.0"
description = "Monorepo root for Personal AI OS"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["core/tests"]
pythonpath = ["core/src"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Exclude only genuine non-source paths: caches, build artifacts, virtual environments.
# Do NOT exclude production source packages or test files — they must be linted.
exclude = [
    ".venv",
    ".git",
    ".ruff_cache",
    ".pytest_cache",
    "__pycache__",
    "*.egg-info",
    "dist",
    "build",
    "MagicMock",        # test-double directory at repo root, not real source
    "temp",             # scratch/temp directory
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
