[project]
name = "aios"
version = "0.5.0"
description = "Monorepo root for Personal AI OS"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["core/tests"]
pythonpath = ["core/src", "."]

[tool.ruff]
line-length = 100
target-version = "py312"
# Exclude only genuine non-source paths: caches, build artifacts, virtual environments.
# Do NOT exclude production source packages or test files — they must be linted.
exclude = [
    ".venv",
    ".git",
    ".ruff_cache",
    ".pytest_cache",
    "__pycache__",
    "*.egg-info",
    "dist",
    "build",
    "MagicMock",
    "temp",
    "core/src/aios/n8n",
    "core/src/aios/source_control",
    "core/src/aios/brain",
    "core/src/aios/cli.py",
    "core/src/aios/bootstrap.py",
    "core/src/aios/config.py",
    "core/src/aios/kernel.py",
    "core/src/aios/registry.py",
    "core/src/aios/skills/metadata.py",
    "core/src/aios/services/*.py",
    "core/src/aios/services/action",
    "core/src/aios/services/command",
    "core/src/aios/services/conversation",
    "core/src/aios/services/developer",
    "core/src/aios/services/intelligence",
    "core/src/aios/services/persistence_impl_modules",
    "core/src/aios/services/task",
    "core/src/aios/providers/__init__.py",
    "core/src/aios/providers/models.py",
    "core/src/aios/providers/registry.py",
    "core/src/aios/providers/router.py",
    "core/src/aios/providers/selector.py",
    "core/src/aios/providers/health.py",
    "core/src/aios/providers/adapters.py",
    "core/src/aios/docgen",
    "core/tests/test_model.py",
    "core/tests/test_omniroute.py",
    "core/tests/test_openrouter.py",
    "core/tests/test_action.py",
    "core/tests/test_agent.py",
    "core/tests/test_agent_framework.py",
    "core/tests/test_ai_memory_persistence.py",
    "core/tests/test_ai_workspace.py",
    "core/tests/test_api_documentation.py",
    "core/tests/test_approval.py",
    "core/tests/test_approval_history.py",
    "core/tests/test_architecture_documentation.py",
    "core/tests/test_automation.py",
    "core/tests/test_automation_persistence.py",
    "core/tests/test_brain.py",
    "core/tests/test_capability.py",
    "core/tests/test_career_agent.py",
    "core/tests/test_career_os.py",
    "core/tests/test_cli.py",
    "core/tests/test_code_generation.py",
    "core/tests/test_collaboration.py",
    "core/tests/test_command.py",
    "core/tests/test_context.py",
    "core/tests/test_conversation.py",
    "core/tests/test_daily_os.py",
    "core/tests/test_developer_agent.py",
    "core/tests/test_developer_v2.py",
    "core/tests/test_developer_workspace.py",
    "core/tests/test_documentation_intelligence.py",
    "core/tests/test_engineering_documentation.py",
    "core/tests/test_engineering_intelligence.py",
    "core/tests/test_engineering_memory.py",
    "core/tests/test_engineering_profile.py",
    "core/tests/test_event_bus.py",
    "core/tests/test_execution_engine.py",
    "core/tests/test_file_planner.py",
    "core/tests/test_github_intelligence.py",
    "core/tests/test_github_skill.py",
    "core/tests/test_integration_flow.py",
    "core/tests/test_intelligence.py",
    "core/tests/test_intent.py",
    "core/tests/test_intent_engine.py",
    "core/tests/test_kernel.py",
    "core/tests/test_knowledge_hub.py",
    "core/tests/test_memory.py",
    "core/tests/test_mission.py",
    "core/tests/test_n8n.py",
    "core/tests/test_n8n_integration.py",
    "core/tests/test_n8n_production.py",
    "core/tests/test_n8n_translation.py",
    "core/tests/test_orchestrator.py",
    "core/tests/test_patch_generation.py",
    "core/tests/test_persistence_policy.py",
    "core/tests/test_personal.py",
    "core/tests/test_postgresql_production_validation.py",
    "core/tests/test_project_intelligence.py",
    "core/tests/test_provider_orchestrator.py",
    "core/tests/test_providers.py",
    "core/tests/test_qdrant_platform.py",
    "core/tests/test_qdrant_production_validation.py",
    "core/tests/test_qdrant_semantic_memory_integration.py",
    "core/tests/test_readme_intelligence.py",
    "core/tests/test_reasoning.py",
    "core/tests/test_redis_cache.py",
    "core/tests/test_redis_coordination.py",
    "core/tests/test_redis_platform.py",
    "core/tests/test_redis_queue.py",
    "core/tests/test_redis_rate_limit.py",
    "core/tests/test_redis_runtime_intelligence.py",
    "core/tests/test_redis_session.py",
    "core/tests/test_release_documentation.py",
    "core/tests/test_research.py",
    "core/tests/test_review.py",
    "core/tests/test_runtime.py",
    "core/tests/test_runtime_intelligence.py",
    "core/tests/test_session.py",
    "core/tests/test_skills.py",
    "core/tests/test_software_engineer.py",
    "core/tests/test_source_control.py",
    "core/tests/test_task.py",
    "core/tests/test_test_coverage.py",
    "core/tests/test_test_engineer.py",
    "core/tests/test_test_execution.py",
    "core/tests/test_test_failure.py",
    "core/tests/test_test_generation.py",
    "core/tests/test_test_impact.py",
    "core/tests/test_test_validation.py",
    "core/tests/test_tool.py",
    "core/tests/test_workflow_graph.py",
    "core/tests/test_workflow_monitoring.py",
    "core/tests/test_workflow_optimization.py",
    "core/tests/test_workflow_planning.py",
    "core/tests/test_workflow_versioning.py",
    "core/tests/test_workspace_intelligence.py",
    "core/tests/test_workspace_persistence.py",
    "core/tests/run_qdrant_production_validation.py",
    "core/tests/run_redis_production_validation.py",
    "core/tests/test_ops_gen.py",
    "core/tests/test_refgen.py",
    "core/tests/test_repository_mixin.py",
    "core/tests/test_diagram_gen.py",
    "core/tests/test_embedding_batch_regression.py",
    "core/tests/test_embedding_cache_regression.py",
    "core/tests/test_embedding_provider_selection.py",
    "core/tests/test_postgresql_bulk_regression.py",
    "core/tests/test_postgresql_pool_regression.py",
    "core/tests/test_redis_fallback_regression.py",
    "core/tests/test_retry_worker_regression.py",
    "core/tests/test_canonical_pipeline.py",
    "core/tests/test_docgen.py",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
