[project]
name = "aios"
version = "1.0.0"
description = "Monorepo root for Personal AI OS"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["core/tests"]
pythonpath = ["core/src", "."]

[tool.ruff]
line-length = 100
target-version = "py312"
# Exclude only genuine non-source paths: caches, build artifacts, virtual environments.
# Do NOT exclude production source packages or test files — they must be linted.
exclude = [
    ".venv",
    ".git",
    ".ruff_cache",
    ".pytest_cache",
    "__pycache__",
    "*.egg-info",
    "dist",
    "build",
    "MagicMock",
    "temp",
    "core/temp",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N"]
ignore = ["E501", "B904", "E741", "B007", "N812", "E402", "B018", "E722", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
